assets/sass/main.scss
$color-body: #f6f6f6;
$bg-body: rgb(51, 51, 51);
$color-warning: #ffc107;

.preload, .preload * {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -ms-transition: none !important;
  -o-transition: none !important;
  transition: none!important;
}

.article-description {
    font-style: italic;
    opacity: .5;
    padding-bottom: 0px;
    border-bottom: 1px solid darken($color-body, 60%);
    margin-bottom: 30px;
    .date {
        position: relative;
        top: 1.3ex;
        padding-right: .5rem;
        background: $bg-body;
    }
}

.article-list {
    .blog-post {
        padding-bottom: .3rem;
        h2 {
            font-size: 1.3rem;
            margin-bottom: 0;
            small {
                opacity: .5;
                font-size: 70%;
                padding-right: .75rem;
            }

            a {
                text-decoration: none!important;
            }
            a:hover, a:active {
                text-decoration: underline!important;
            }
        }
    }
}

.flush-list {
     padding-left: 15px;
}
ol.flush-list {
    padding-left: 20px;
}

.shy-list {
    padding-left: 0px;
    list-style: none;
}

footer,
#body_home {
    text-align: left;
}

footer {
    padding-top: 20px;
    padding-bottom: 30px;
    a:before {
        transition: opacity 2s;
        opacity: .3;
        width: 20px;
        height: 20px;
        vertical-align: middle;
        display: inline-block;
        margin-right: 4px;
        content: "";
        background: url(/asset/pics/irc-icon.svg) no-repeat right/20px;
    }
    a[href*="github.com"]:before {
        background-image: url(/asset/pics/github-logo.svg);
    }
    a[href*="twitter.com"]:before {
        background-image: url(/asset/pics/twitter-logo.svg);
    }
}
footer:hover {
    a:before {
        transition: opacity .7s;
        opacity: 1;
    }
}

#body_home {
    h1 {
        text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, .5);
    }

    .oi-data-transfer-download {
        font-size: 90%;
        top: 2px;
    }

    .easter {
        font-size: 90%;
        opacity: 0;
        position: relative;
        left: -9999;
        transition: opacity 5s 2s;
    }

    #logo {
        img {
            opacity: .2;
            transition: opacity 2s;
        }
    }
    #content:not(.preload) main:hover {
        #logo img, .easter {
            opacity: 1;
        }
    }

    .masthead {
        padding-bottom: 5px;
    }

    main {
        display: flex;
        * {
            align-items: center;
            justify-content: center;
        }
    }
}


a,
a:focus,
a:hover {
    outline: 0;
    color: #fff;
}

.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
      color: #333;
      text-shadow: none;
      background-color: #fff;
      border: .05rem solid #fff;
}

html,
body {
    height: 100%;
    background-color: #333;
}

body {
    display: -ms-flexbox;
    display: -webkit-box;
    display: flex;
    -ms-flex-pack: center;
    -webkit-box-pack: center;
    justify-content: center;
    color: #fff;
    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
}

.cover-container {
    max-width: 52em;
}

.footer {
    padding-top: 20px;
}

.masthead {
    padding-bottom: 20px;
    margin-bottom: 4rem;
}

.masthead-brand {
    margin-bottom: 0;
}

.nav-masthead .nav-link {
    padding: .25rem 0;
    font-weight: 700;
    color: rgba(255, 255, 255, .5);
    background-color: transparent;
    border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
    border-bottom-color: rgba(255, 255, 255, .25);
}

.nav-masthead .nav-link + .nav-link {
    margin-left: 1rem;
}

.nav-masthead .active {
    color: #fff;
    border-bottom-color: #fff;
}

@media (min-height: 1050px) {
    main {
        margin-top: -200px;
    }
}

body {
    .masthead-brand {
        float: left;
    }
    .nav-masthead {
        float: left;
        padding-top: 3px;
    }
}

@media (max-width: 28em) {
    body:not(#body_home) {
        .masthead-brand {
            float: none;
        }
        .nav-masthead {
            float: none;
            padding-left: 0;
        }
    }
}

@media (min-width: 830px) {
    #content {
        width: 800px;
    }
}
@media (min-width: 936px) {
    #body_home main {
        position: relative;
        left: -61px;
        padding-left: 0;
        margin-left: 0;
    }
}
@media (max-width: 799px) {
    #content {
        width: 100%;
    }
}


.cover {
    padding: 0 1.5rem;
}
.cover .btn-lg {
    padding: .75rem 1.25rem;
    font-weight: 700;
}

.mastfoot {
    color: rgba(255, 255, 255, .5);
}




html {
    overflow-y: scroll;
}

h2 {
    .os-icon {
        vertical-align: bottom;
    }
}

#content {
    a:not(.btn) {
        text-decoration: underline;
        text-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
        color: #aaa;
    }
    a:hover:not(.btn), a:active:not(.btn) {
        text-decoration: none;
    }
}

body:not(#body_home) {
    .nav-masthead {
        padding-left: 2rem;
    }
    nav:not(.breadcrumbs) {
        margin-bottom: 20px;
        a {
            text-decoration: none;
        }
    }
}

.icon{
    width: 25px;
    height: 25px;
    use {
        width: 25px;
        height: 25px;
        fill: currentColor;
    }
}

.nb {
    white-space: nowrap;
}

[data-platform]:not([data-platform=generic]) {
    position: absolute;
    left: -9999px;
}

/*.downloads a.button {
    display: block;
    border: 1px solid #000033;
    background-color: #000066;
    background-color: #434377;
    color: #fff; height: 60px;
    float: left; margin: 1em;
    border-radius: 25px;
    padding: 10px;
    text-decoration: none;
    width: 250px;
    text-align: center;
}
.downloads .os-icon {
    float: left;
    width: 30px;
    height: 30px;
    margin: 15px 0.5em;
}
.downloads .filetype {
    display: block;
    float: right;
    background-image: url("http://rakudo.org/wp/wp-content/uploads/2016/02/file-icon.png");
    background-size: 50px;
    background-repeat: no-repeat;
    width: 40px;
    height: 50px;
    margin: 5px 0.5em;
}
.downloads .filetype .name {
    background-color: white;
    border: 1px solid black;
    color: black;
    padding: 1px;
    font-size: 12px;
    top: 20px;
    left: 10px;
    position: relative;
}
.downloads .rakudo {
    font-size: 12px;
}
.downloads .version {
    font-size: 20px;
    font-weight: bold;
}
.downloads .details {
    font-size: 12px;
}
.downloads {
    line-height: 1.3em;
}*/

.downloads-panel {
    img {
        margin-bottom: 5px;
    }
    .download span {
        display: block;
        line-height: 1.2em;
    }

    .version {
        font-weight: bold;
        font-size: 120%;
    }

    > [class*="col-"] {
        padding-bottom: 1rem;
    }
}

code,
pre, code {
    color: darken($color-body, 30%);
    text-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
}

.jumbotron-wiry {
    background: none;
    border: 1px solid darken($color-body, 60%);
    padding-top: 2rem;
    padding-bottom: 1rem;
}
.breadcrumb {
    font-size: 80%;
    opacity: .4;
    transition: opacity 1s;
    padding-left: 0;
    background: none!important;
    clear: both;
}

.breadcrumb:hover {
    opacity: 1;
    transition: opacity .5s;
}

.accordion {
    padding-bottom: 1rem;
    .card-header {
        padding: 0;
    }
    .btn-link {
        text-decoration: none;
        padding: 1rem;
    }
}

.suck-b {
    margin-bottom: 0;
}
.kick-b {
    margin-bottom: 30px;
}

.kick-b-cols {
    > [class*="col-"] {
        padding-bottom: 2rem;
    }
}

.compiler-downloads-panel {
    padding-bottom: 1rem;

    > [class*="col-"]:first-child {
        padding-bottom: 0;
    }
    [class*="col-"] {
        padding-bottom: 1rem;
    }
}

.btn-secondary {
    transition-property: background, border-color, text-shadow color;
    transition-duration: .1s;
}
.btn-secondary:hover,
.btn-secondary:active, {
    background: #d3d3d3;
    color: #222;
    border-color: #bbb;
    text-shadow: .1px .1px .1px rgba(0, 0, 0, .4);
}

.tighten-line-height {
    line-height: 1em;
}

.alert-warning {
    padding: .5rem .5rem .5rem 2.5rem;
    position: relative;
    font-size: 80%;
    border-color: darken($color-warning, 25%)!important;
    transition: border-color 1s, text-shadow 1s;
    color: $color-warning;
}
.alert-warning:before {
    content: '\e0d8';
    font-family: 'Icons';
    font-style: normal;
    font-weight: normal;
    line-height: 1em;
    position: absolute;
    left: .9rem;
    top: 50%;
    font-size: 1rem;
    margin-top: -.6rem;
    color: $color-warning;
    opacity: .3;
    transition: opacity 1s;
}
.alert-warning:hover {
    text-shadow: 1px 1px 1px rgba(0, 0, 0, .9);
    border-color: darken($color-warning, 10%)!important;
}
.alert-warning:hover:before {
    opacity: 1;
}

.bg-none {
    background: none;
}

[class^="file-icon-"] {
    padding-left: 25px;
    min-height: 20px;
    display: inline-block;
    background: url(/asset/pics/file-icon-signature.png) no-repeat left;
    background-size: auto 20px;
}

[class^="file-icon-windows"] {
    background-image: url(/asset/pics/os-icon-windows.png)
}

[class^="file-icon-macos"] {
    background-image: url(/asset/pics/os-icon-apple.png)
}

[class^="file-icon-source"] {
    background-image: url(/asset/pics/os-icon-source.png)
}

.files-list {
    td, th {
        padding: 5px 10px;
        vertical-align: middle;
    }
    .ver td {
        padding-top: 13px;
        padding-bottom: 3px;
    }

    td:first-child + td,
    th:first-child + th {
        opacity: .8;
        font-size: 80%;
    }
}

.archived {
    display: none;
}

.container {
    width: 100%;
}

.text-warning, .alert-warning {
    a {
        color: inherit!important;
    }
}


.need-help {
    opacity: 0;
}

@media print {
    header, footer, .os-icon, .show-archived-versions {
        display: none!important;
    }
    html, body, .cover-container.h-100 {
        height: auto!important;
        display: block!important
    }
    .container {
        width: auto;
    }

    .row {
        display: block;
        [class*="col-"] {
            display: block!important;
            width: 100%!important;
            max-width: 100%!important;
        }
    }
    .card {
        border: 0;
        .card-body {
            padding-left: 0;
        }
    }

    .btn {
        border: 0;
        padding: 0;
        display: inline;
    }

    a:after {
        content: " ( " attr(href) " ) ";
        color: #050;
        font-size: 80%;
    }

    a[href^="/"]:after {
        content: " ( https://rakudo.org/" attr(href) " ) ";
    }
    a[href^="#"]:after, a[href^="mailto:"]:after {
        content: "";
    }

    .downloads-panel {
        .download {
            text-align: left;
        }
    }

    .archived {
        opacity: 1;
        display: block;
    }

    #body_home {
        .easter {
            opacity: 1;
            visibility: visible;
            display: block;
        }
        main#main-cover.inner.cover, [class*="col-"] {
            display: block!important;
            max-width: 100%!important;
            h1 {
                font-size: 4rem;
            }
            .lead {
                font-size: 2rem;
            }
            .btn {
                padding-left: 0;
            }
        }
    }

    .accordion {
        .collapse {
            display: block!important;
        }

        h5 button {
            color: #000;
            font-size: 1.4rem;
            padding-left: 0!important;
            padding-bottom: 0;
            margin-left: 0!important;
            background: 0;
            border: 0;
        }

        .card-header {
            border: 0;
        }
        .card-body {
            padding-top: 0;
        }
    }
}

